# CMakeExerciesDependencyFromGit

./: .gitignore  CMakeLists.txt  README.md  test.bat
src/: main.cpp
